--- a/ProgettoCodice/app/src/main/res/layout/activity_sign_up.xml
+++ b/ProgettoCodice/app/src/main/res/layout/activity_sign_up.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Sign_Up">
+    tools:context=".accesso.Sign_Up">
 
     <TextView
         android:id="@+id/textView"
