--- a/ProgettoCodice/app/src/main/res/layout/login.xml
+++ b/ProgettoCodice/app/src/main/res/layout/login.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".accesso.Login">
+    tools:context="gui.accesso.Login">
 
     <TextView
         android:id="@+id/nomeapplabel"
