--- a/ProgettoCodice/app/src/main/res/layout/activity_main.xml
+++ b/ProgettoCodice/app/src/main/res/layout/activity_main.xml
@@ -4,11 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#7FDC68"
-    tools:context="gui.accesso.PreLogin">
+    tools:context=".MainActivity">
 
     <TextView
-        android:id="@+id/textView4"
+        android:id="@+id/labelLogo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="76dp"
@@ -20,30 +19,31 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView6"
+        android:id="@+id/label2021"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
         android:text="2021"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.501"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView4" />
+        app:layout_constraintTop_toBottomOf="@+id/labelLogo" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/buttonRegistrati"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="400dp"
         android:backgroundTint="#FFFFFF"
         android:text="Registrati"
         android:textColor="#000000"
         android:textColorHighlight="#D31212"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="485dp" />
+        app:layout_constraintTop_toBottomOf="@+id/label2021" />
 
     <TextView
-        android:id="@+id/textView7"
+        android:id="@+id/labelDomanda"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="52dp"
@@ -51,20 +51,21 @@
         android:text="hai già un account?"
         android:textSize="16sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button2" />
+        app:layout_constraintTop_toBottomOf="@+id/buttonRegistrati" />
 
-    <TextView
-        android:id="@+id/textView8"
+    <Button
+        android:id="@+id/labelBottoneAccedi"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="56dp"
-        android:clickable="true"
+        android:layout_marginTop="44dp"
+        android:backgroundTint="#00FFFFFF"
         android:text="Accedi"
         android:textColor="#033DED"
         android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.536"
-        app:layout_constraintStart_toEndOf="@+id/textView7"
-        app:layout_constraintTop_toBottomOf="@+id/button2" />
+        app:layout_constraintHorizontal_bias="0.548"
+        app:layout_constraintStart_toEndOf="@+id/labelDomanda"
+        app:layout_constraintTop_toBottomOf="@+id/buttonRegistrati" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
