--- a/ProgettoCodice/app/src/main/res/layout/activity_main.xml
+++ b/ProgettoCodice/app/src/main/res/layout/activity_main.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     tools:context=".MainActivity">
 
     <TextView
@@ -13,6 +14,7 @@
         android:layout_marginTop="76dp"
         android:text="NaTour"
         android:textSize="20sp"
+        android:textStyle="italic"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
@@ -30,42 +32,53 @@
         app:layout_constraintTop_toBottomOf="@+id/labelLogo" />
 
     <Button
-        android:id="@+id/buttonRegistrati"
+        android:id="@+id/labelBottoneAccedi"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="400dp"
-        android:backgroundTint="#FFFFFF"
-        android:text="Registrati"
+        android:layout_marginTop="40dp"
+        android:backgroundTint="@color/white"
+        android:text="Accedi"
         android:textColor="#000000"
-        android:textColorHighlight="#D31212"
+        android:textSize="16sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/label2021" />
+        app:layout_constraintHorizontal_bias="0.661"
+        app:layout_constraintStart_toEndOf="@+id/labelDomanda"
+        app:layout_constraintTop_toBottomOf="@+id/buttonRegistrati" />
 
     <TextView
         android:id="@+id/labelDomanda"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="52dp"
-        android:layout_marginTop="56dp"
+        android:layout_marginStart="40dp"
+        android:layout_marginTop="52dp"
         android:text="hai già un account?"
         android:textSize="16sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/buttonRegistrati" />
 
     <Button
-        android:id="@+id/labelBottoneAccedi"
+        android:id="@+id/buttonRegistrati"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="44dp"
-        android:backgroundTint="#00FFFFFF"
-        android:text="Accedi"
-        android:textColor="#033DED"
-        android:textSize="16sp"
-        android:textStyle="bold"
+        android:layout_marginTop="196dp"
+        android:backgroundTint="#FFFFFF"
+        android:text="Registrati"
+        android:textColor="#000000"
+        android:textColorHighlight="#D31212"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.548"
-        app:layout_constraintStart_toEndOf="@+id/labelDomanda"
-        app:layout_constraintTop_toBottomOf="@+id/buttonRegistrati" />
+        app:layout_constraintHorizontal_bias="0.503"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <FrameLayout
+        android:id="@+id/fragmentcontainer"
+        android:layout_width="match_parent"
+        android:layout_height="380dp"
+        android:layout_marginBottom="4dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
