--- a/ProgettoCodice/app/src/main/res/layout/fragment_login.xml
+++ b/ProgettoCodice/app/src/main/res/layout/fragment_login.xml
@@ -9,11 +9,11 @@
 
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/buttonaccedi"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
-        android:text="Button"
+        android:layout_marginTop="8dp"
+        android:text="accedi"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
@@ -38,14 +38,15 @@
         android:ems="10"
         android:inputType="textEmailAddress"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/labelEmaillogin" />
+        app:layout_constraintTop_toBottomOf="@+id/labelEmaillogin"
+        tools:ignore="SpeakableTextPresentCheck" />
 
     <TextView
         android:id="@+id/labelPasswordlogin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="33dp"
-        android:layout_marginTop="39dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="4dp"
         android:text="password"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textEmaillogin" />
@@ -59,7 +60,8 @@
         android:ems="10"
         android:inputType="textPassword"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/labelPasswordlogin" />
+        app:layout_constraintTop_toBottomOf="@+id/labelPasswordlogin"
+        tools:ignore="SpeakableTextPresentCheck" />
 
     <CheckBox
         android:id="@+id/checkBox"
@@ -71,20 +73,24 @@
         app:layout_constraintTop_toBottomOf="@+id/textPassword" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/buttonGoogleaccess"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Button"
+        android:layout_marginStart="4dp"
+        android:layout_marginTop="4dp"
+        android:text="accedi con google"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button" />
+        app:layout_constraintTop_toBottomOf="@+id/buttonaccedi" />
 
     <Button
-        android:id="@+id/button3"
+        android:id="@+id/buttonFacebookaccess"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Button"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button" />
+        android:layout_marginStart="4dp"
+        android:text="accedi con facebook
+"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/buttonGoogleaccess" />
 
     <TextView
         android:id="@+id/labeltitolologin"
