aggiunta di bug e crash dell'app durante il passaggio da login a home

--- a/ProgettoCodice/app/src/main/res/layout/activity_main.xml
+++ b/ProgettoCodice/app/src/main/res/layout/activity_main.xml
@@ -7,8 +7,10 @@
     android:background="@color/white"
     tools:context=".MainActivity">
 
+
     <TextView
-        android:id="@+id/labelLogo"
+
+        android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="76dp"
@@ -24,12 +26,11 @@
         android:id="@+id/label2021"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
         android:text="2021"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.501"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/labelLogo" />
+        app:layout_constraintTop_toBottomOf="@+id/textView" />
 
     <Button
         android:id="@+id/labelBottoneAccedi"
