aggiunta key per l'uso della mappa di google maps, con avvenuta visualizzazione del frame mappa

--- a/ProgettoCodice/app/src/main/res/layout/fragment_menu_laterale.xml
+++ b/ProgettoCodice/app/src/main/res/layout/fragment_menu_laterale.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#4CAF50"
     tools:context=".GUI.home.MenuLateraleFragment">
 
 
@@ -11,7 +12,10 @@
         android:id="@+id/imageView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="28dp"
+        android:layout_marginTop="60dp"
         android:src="@android:drawable/ic_dialog_map"
-        tools:layout_editor_absoluteX="32dp"
-        tools:layout_editor_absoluteY="149dp" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="ImageContrastCheck" />
 </androidx.constraintlayout.widget.ConstraintLayout>
