--- a/ProgettoCodice/app/src/main/res/layout/activity_home.xml
+++ b/ProgettoCodice/app/src/main/res/layout/activity_home.xml
@@ -6,17 +6,15 @@
     android:layout_height="match_parent"
     tools:context=".GUI.home.Home">
 
+
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
-        android:layout_marginBottom="40dp"
+        android:layout_marginBottom="68dp"
         android:text="+"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
-
-
-
 
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/ContainerMappa"
@@ -41,6 +39,7 @@
         android:layout_width="180dp"
         android:layout_height="60dp"
         android:layout_marginTop="36dp"
+        android:background="@color/cardview_shadow_start_color"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
