--- a/ProgettoCodice/app/src/main/res/layout/activity_home.xml
+++ b/ProgettoCodice/app/src/main/res/layout/activity_home.xml
@@ -9,6 +9,7 @@
 
 
     <Button
+        android:id="@+id/cerca_qui"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
@@ -22,6 +23,7 @@
         android:name="com.example.progettoingsw.GUI.home.MapsFragment"
         android:layout_width="match_parent"
         android:layout_height="595dp"
+        android:clickable="false"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -36,15 +38,19 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0" />
 
+
     <SearchView
-        android:layout_width="180dp"
-        android:layout_height="60dp"
+        android:id="@+id/searchView"
+        android:layout_width="360dp"
+        android:layout_height="48dp"
         android:layout_marginTop="36dp"
-        android:background="@color/cardview_shadow_start_color"
+        android:clickable="true"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent">
+
+    </SearchView>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
 
