--- a/ProgettoCodice/app/src/main/res/layout/fragment_registrati.xml
+++ b/ProgettoCodice/app/src/main/res/layout/fragment_registrati.xml
@@ -14,6 +14,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="4dp"
         android:text="Continua"
+        app:iconTint="#673AB7"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
