--- a/ProgettoCodice/app/src/main/res/layout/activity_impostazioni.xml
+++ b/ProgettoCodice/app/src/main/res/layout/activity_impostazioni.xml
@@ -1,54 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".GUI.impostazioni.Impostazioni">
 
-    <ImageView
-        android:id="@+id/impostazioni_imageProfilo"
-        android:layout_width="wrap_content"
+    <com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/appBarLayout"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:srcCompat="@tools:sample/avatars" />
+        android:theme="@style/Theme.ProgettoINGSW.AppBarOverlay">
 
-    <TextView
-        android:id="@+id/impostazioni_labelnomeutente"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:text="nome_utente"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/impostazioni_imageProfilo" />
+    </com.google.android.material.appbar.AppBarLayout>
 
-    <androidx.fragment.app.FragmentContainerView
+    <androidx.viewpager.widget.ViewPager
+        android:id="@+id/view_pager"
         android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:id="@+id/impostazioni_containercambiaavatar"
-        android:layout_marginTop="20dp"
-        app:layout_constraintTop_toBottomOf="@+id/impostazioni_labelnomeutente"
-        tools:layout_editor_absoluteX="0dp" />
+        android:layout_height="match_parent"
+        app:layout_anchor="@+id/view_pager"
+        app:layout_anchorGravity="center"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-    <androidx.fragment.app.FragmentContainerView
-        android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:id="@+id/impostazioni_containercambianomeutente"
-        app:layout_constraintTop_toBottomOf="@+id/impostazioni_containercambiaavatar"
-        tools:layout_editor_absoluteX="0dp" />
+        <com.google.android.material.tabs.TabLayout
+            android:id="@+id/tabs"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+    </androidx.viewpager.widget.ViewPager>
 
-    <androidx.fragment.app.FragmentContainerView
-        android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:id="@+id/impostazioni_containercambiacambiapassword"
-        app:layout_constraintTop_toBottomOf="@+id/impostazioni_containercambianomeutente"
-        tools:layout_editor_absoluteX="0dp" />
-
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
