aggiornamento della Home  e collegamento alle impostazioni con modifiche grafiche al menù laterale(incompleto)

--- a/ProgettoCodice/app/src/main/res/layout/activity_home.xml
+++ b/ProgettoCodice/app/src/main/res/layout/activity_home.xml
@@ -54,5 +54,13 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <Button
+        android:id="@+id/Home_homev2button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="homev2"
+        app:layout_constraintTop_toBottomOf="@+id/Home_impostazionibutton"
+        tools:layout_editor_absoluteX="311dp" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
 
