--- a/ProgettoCodice/app/src/main/res/navigation/mobile_navigation2.xml
+++ b/ProgettoCodice/app/src/main/res/navigation/mobile_navigation2.xml
@@ -2,24 +2,24 @@
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/mobile_navigation"
+    android:id="@+id/mobile_navigation2"
     app:startDestination="@+id/menulaterale_percorsicaricati">
 
     <fragment
         android:id="@+id/menulaterale_percorsicaricati"
-        android:name="com.example.progettoingsw.GUI.home.ui.home.HomeFragment"
+        android:name="com.example.progettoingsw.GUI.homev2.ui.home.HomeFragment"
         android:label="@string/menu_home"
         tools:layout="@layout/fragment_home" />
 
     <fragment
         android:id="@+id/nav_gallery"
-        android:name="com.example.progettoingsw.GUI.home.ui.gallery.GalleryFragment"
+        android:name="com.example.progettoingsw.GUI.homev2.ui.gallery.GalleryFragment"
         android:label="@string/menu_gallery"
         tools:layout="@layout/fragment_gallery" />
 
     <fragment
         android:id="@+id/nav_slideshow"
-        android:name="com.example.progettoingsw.GUI.home.ui.slideshow.SlideshowFragment"
+        android:name="com.example.progettoingsw.GUI.homev2.ui.slideshow.SlideshowFragment"
         android:label="@string/menu_slideshow"
         tools:layout="@layout/fragment_slideshow" />
 </navigation>
