problema di crash dopo la registrazione fixata, argomenti e contenuti passati correttamente al LogicCenter, cambio di tipi nelle funzioni del LogicCenter da Editable a String, eliminazioni delle vecchie classi Home.java inutilizzate per aggiornamento a Homev2.java, revisione di  vari ID all'interno dell app.

--- a/ProgettoCodice/app/src/main/res/layout/content_homev2.xml
+++ b/ProgettoCodice/app/src/main/res/layout/content_homev2.xml
@@ -20,7 +20,7 @@
 
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/fragmentContainerView"
-        android:name="com.example.progettoingsw.GUI.home.MapsFragment"
+        android:name="com.example.progettoingsw.GUI.homev2.fragment.MapsFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:layout_editor_absoluteX="81dp"
