Search bar retarded

--- a/ProgettoCodice/app/src/main/res/menu/homev2.xml
+++ b/ProgettoCodice/app/src/main/res/menu/homev2.xml
@@ -7,4 +7,12 @@
         android:title="Impostazioni"
         app:showAsAction="never"
         />
+
+    <item
+        android:id="@+id/action_search"
+        android:title="search"
+        android:icon="@android:drawable/ic_menu_search"
+        app:actionViewClass="androidx.appcompat.widget.SearchView"
+        app:showAsAction="ifRoom|collapseActionView"/>
+
 </menu>
