--- a/ProgettoCodice/app/src/main/res/layout/app_bar_homev2.xml
+++ b/ProgettoCodice/app/src/main/res/layout/app_bar_homev2.xml
@@ -11,12 +11,19 @@
         android:layout_height="wrap_content"
         android:theme="@style/Theme.ProgettoINGSW.AppBarOverlay">
 
+
+
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
             app:popupTheme="@style/Theme.ProgettoINGSW.PopupOverlay" />
+
+        <ListView
+            android:id="@+id/listview"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
 
     </com.google.android.material.appbar.AppBarLayout>
 
