chiamata volley http

--- a/ProgettoCodice/app/src/main/res/layout/app_bar_homev2.xml
+++ b/ProgettoCodice/app/src/main/res/layout/app_bar_homev2.xml
@@ -12,7 +12,6 @@
         android:theme="@style/Theme.ProgettoINGSW.AppBarOverlay">
 
 
-
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
@@ -23,7 +22,8 @@
         <ListView
             android:id="@+id/listview"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:visibility="gone" />
 
     </com.google.android.material.appbar.AppBarLayout>
 
