aggiunta funzioni per il cambio delle informazioni cancellazione dei metodi non più utilizzati per passaggio all'uso del server spring

--- a/ProgettoCodice/app/src/main/res/layout/fragment_cambia_avatar.xml
+++ b/ProgettoCodice/app/src/main/res/layout/fragment_cambia_avatar.xml
@@ -75,11 +75,11 @@
         android:clickable="true"/>
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/button_cambiaavatarconferma"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="48dp"
-        android:text="Button"
+        android:text="Conferma"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
