--- a/ProgettoCodice/app/src/main/res/layout/fragment_login.xml
+++ b/ProgettoCodice/app/src/main/res/layout/fragment_login.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="380dp"
+    android:background="@color/white"
     android:clickable="true"
     tools:context=".GUI.LoginFragment">
 
