--- a/ProgettoCodice/app/src/main/res/layout/content_homev2.xml
+++ b/ProgettoCodice/app/src/main/res/layout/content_homev2.xml
@@ -28,4 +28,12 @@
             tools:layout_editor_absoluteX="81dp"
             tools:layout_editor_absoluteY="107dp" />
 
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/signout"
+            android:text="Sign out"
+            android:layout_centerHorizontal="true"
+            android:layout_alignParentBottom="true"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
